[package]
name = "nss-jsonfile"
version = "0.3.0"
authors = ["takonomura"]
edition = "2021"
repository = "https://github.com/takonomura/nss-jsonfile"
license = "LGPL-3.0"

[lib]
name = "nss_jsonfile"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
libc = "0.2.154"
libnss = "0.9.0"
paste = "1.0.14"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
