[package]
name = "nss-jsonfile"
version = "0.3.1"
authors = ["takonomura"]
edition = "2021"
repository = "https://github.com/takonomura/nss-jsonfile"
license = "LGPL-3.0"

[lib]
name = "nss_jsonfile"
crate-type = ["cdylib"]

[dependencies]
libc = "=0.2.189"
libnss = "=0.9.0"
paste = "=1.0.15"
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.151"
